@@ -78,6 +78,7 @@ devscripts (2.18.2) UNRELEASED; urgency=medium
       - Add recommends on libstring-shellquote-perl.
     + New --version option.
     + New --force alias for -f.
+    + Correct terminology ref->committish (see gitglossary(7)).
 
  -- Pierre-Elliott Bécue <becue@crans.org>  Sat, 17 Mar 2018 20:21:44 +0100
 
